# Travelogue

docs/: family_reference_plan.md
travelogue/: .env  README.md  config.yaml  mkdocs.yml  pyproject.toml
travelogue/docs/: index.md
travelogue/site/: 404.html  index.html  objects.inv  sitemap.xml
travelogue/site/notebooks/supportvectors-common/: index.html
travelogue/site/project-guide/tips-and-tricks/cuda-hell/: index.html
travelogue/site/search/: search_index.json
travelogue/src/Travelogue/: main.py  main2.py
travelogue/src/Travelogue/Utilities/: config_loader.py  qdrant_setup.py
travelogue/src/Travelogue/Utilities/Clip/: embed_images.py  query_images.py
travelogue/src/Travelogue/Utilities/GuardRails/: query_guardrails.py
travelogue/src/Travelogue/Utilities/InsightFace/: collection_create.py  detect_and_embed.py
travelogue/src/Travelogue/Utilities/Llava/: captioner.py  chat_utils.py
travelogue/src/Travelogue/Utilities/Ollama/: LLM.py
travelogue/src/Travelogue/Utilities/Prompts/: propositioner.md  question_answer_generator.md  summarizer.md
travelogue/src/Travelogue/Utilities/siglip2/: embed_images.py  query_images.py
travelogue/travelogue.egg-info/: PKG-INFO  SOURCES.txt
